# backend/gen/models/auth_return_user.go
@@ -1,0 +1,53 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// AuthReturnUser auth return user
+//
+// swagger:model AuthReturnUser
+type AuthReturnUser struct {
+
+	// screen name
+	ScreenName string `json:"screen_name,omitempty"`
+
+	// user id
+	UserID int64 `json:"user_id,omitempty"`
+}
+
+// Validate validates this auth return user
+func (m *AuthReturnUser) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this auth return user based on context it is used
+func (m *AuthReturnUser) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *AuthReturnUser) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *AuthReturnUser) UnmarshalBinary(b []byte) error {
+	var res AuthReturnUser
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
