# backend/gen/restapi/operations/auth_api/post_auth_user_responses.go
@@ -1,0 +1,130 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package auth_api
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"backend/gen/models"
+)
+
+// PostAuthUserOKCode is the HTTP code returned for type PostAuthUserOK
+const PostAuthUserOKCode int = 200
+
+/*PostAuthUserOK ユーザー登録成功
+
+swagger:response postAuthUserOK
+*/
+type PostAuthUserOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.AuthReturnUser `json:"body,omitempty"`
+}
+
+// NewPostAuthUserOK creates PostAuthUserOK with default headers values
+func NewPostAuthUserOK() *PostAuthUserOK {
+
+	return &PostAuthUserOK{}
+}
+
+// WithPayload adds the payload to the post auth user o k response
+func (o *PostAuthUserOK) WithPayload(payload *models.AuthReturnUser) *PostAuthUserOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post auth user o k response
+func (o *PostAuthUserOK) SetPayload(payload *models.AuthReturnUser) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostAuthUserOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// PostAuthUserUnauthorizedCode is the HTTP code returned for type PostAuthUserUnauthorized
+const PostAuthUserUnauthorizedCode int = 401
+
+/*PostAuthUserUnauthorized Unauthorized
+
+swagger:response postAuthUserUnauthorized
+*/
+type PostAuthUserUnauthorized struct {
+}
+
+// NewPostAuthUserUnauthorized creates PostAuthUserUnauthorized with default headers values
+func NewPostAuthUserUnauthorized() *PostAuthUserUnauthorized {
+
+	return &PostAuthUserUnauthorized{}
+}
+
+// WriteResponse to the client
+func (o *PostAuthUserUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(401)
+}
+
+// PostAuthUserInternalServerErrorCode is the HTTP code returned for type PostAuthUserInternalServerError
+const PostAuthUserInternalServerErrorCode int = 500
+
+/*PostAuthUserInternalServerError Internal Server Error
+
+swagger:response postAuthUserInternalServerError
+*/
+type PostAuthUserInternalServerError struct {
+}
+
+// NewPostAuthUserInternalServerError creates PostAuthUserInternalServerError with default headers values
+func NewPostAuthUserInternalServerError() *PostAuthUserInternalServerError {
+
+	return &PostAuthUserInternalServerError{}
+}
+
+// WriteResponse to the client
+func (o *PostAuthUserInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(500)
+}
+
+// PostAuthUserServiceUnavailableCode is the HTTP code returned for type PostAuthUserServiceUnavailable
+const PostAuthUserServiceUnavailableCode int = 503
+
+/*PostAuthUserServiceUnavailable Service Unavailable
+
+swagger:response postAuthUserServiceUnavailable
+*/
+type PostAuthUserServiceUnavailable struct {
+}
+
+// NewPostAuthUserServiceUnavailable creates PostAuthUserServiceUnavailable with default headers values
+func NewPostAuthUserServiceUnavailable() *PostAuthUserServiceUnavailable {
+
+	return &PostAuthUserServiceUnavailable{}
+}
+
+// WriteResponse to the client
+func (o *PostAuthUserServiceUnavailable) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(503)
+}
