# backend/handler/post_auth_user.go
@@ -1,0 +1,23 @@
+package handler
+
+import (
+	"backend/gen/models"
+	"backend/gen/restapi/operations/auth_api"
+	"backend/handler/auth"
+
+	"github.com/go-openapi/runtime/middleware"
+)
+
+func PostAuthUser(params auth_api.PostAuthUserParams, principal interface{}) middleware.Responder {
+
+	header := params.HTTPRequest.Header.Get("Authorization")
+
+	// TODO: エラーハンドリング
+	returnValue, err := auth.ValidateTokenHandler(header)
+	if err != nil {}
+
+	userInfo := returnValue.(models.AuthReturnUser)
+
+	return auth_api.NewPostAuthUserOK().WithPayload(&userInfo)
+
+}
