# backend/swagger/swagger.yaml
@@ -1,11 +1,17 @@
 swagger: "2.0"
 info: # infoオブジェクト
-  title: "task-management"
+  title: "homework-management"
   version: "1.0.0"
 host: "example.swagger.io"
 basePath: "/v1"
 schemes:
 - "http"
+securityDefinitions:
+  bearerAuth:
+    name: Authorization
+    in: header
+    type: apiKey
+    description: JWT Authorization header
 paths: # pathsオブジェクト
   /auth/login:
     post:
@@ -61,6 +67,34 @@ paths: # pathsオブジェクト
           description: "Internal Server Error"
         503:
           description: "Service Unavailable"
+  /auth/user:
+    post:
+      security:
+      - bearerAuth: []
+      tags:
+      - "AuthApi"
+      summary: "ユーザー情報返却"
+      operationId: "postAuthUser"
+      produces:
+      - "application/json"
+      #parameters:
+      #- name: Authorization
+      #  in: header
+      #  description: JWT access token
+      #  required: true
+      #  type: string
+      responses: # responsesオブジェクト
+        200:
+          description: "ユーザー登録成功"
+          schema: # schemaオブジェクト
+            $ref: "#/definitions/AuthReturnUser"
+            # definitionsに定義されたオブジェクトを参照
+        401:
+          description: "Unauthorized"
+        500:
+          description: "Internal Server Error"
+        503:
+          description: "Service Unavailable"
 definitions: # definitionsオブジェクト
   AuthUserReq: # schemaオブジェクト
     type: "object"
@@ -73,4 +107,12 @@ definitions: # definitionsオブジェクト
     type: "object"
     properties:
       token: # schemaオブジェクト
+        type: "string"
+  AuthReturnUser: # schemaオブジェクト
+    type: "object"
+    properties:
+      user_id: # schemaオブジェクト
+        type: "number"
+        format: "int64"
+      screen_name:
         type: "string"
